add entity in consumer-application
refactor webclient-config